test/scc/decl/semantic-errors/036.t
union A
{
    int x;
};

struct A
{
    int x;
};
